[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.108.0",
    "ollama>=0.5.4",
    "langchain>=0.3.27",
    "langchain-text-splitters>=0.3.11",
    "ipykernel>=6.30.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "transformers>=4.56.2",
    "langchain-openai>=0.3.33",
    "langchain-postgres>=0.0.15",
    "langchain-ollama>=0.3.8",
    "loguru>=0.7.3",
    "ipywidgets>=8.1.7",
]
